avoid double borders for selections

--- a/app/src/styles/App.scss
+++ b/app/src/styles/App.scss
@@ -16,6 +16,7 @@
 #selections-modern-container > div:nth-child(2) > div.selection.dropdown {
   border-top-left-radius: 0px!important;
   border-bottom-left-radius: 0px!important;
+  border-left: none;
 }
 #selections-modern-container > div:nth-child(2) {
   padding-left: 0;
